--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+5252.	[bug]		filter-aaaa: named crashed upon shutdown if it was in
+			the process of recursing for A RRsets. [GL #1040]
+
 5251.	[bug]		Statistics were broken in x86 Windows builds.
 			[GL #1081]
 
