--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+5239.	[bug]		TCP failures were affecting EDNS statistics. [GL #1059]
+
 5238.	[bug]		Fix a possible deadlock in TCP code. [GL #1046]
 
 5237.	[bug]		Recurse to find the root server list with 'dig +trace'.
