--- a/bin/dnssec/dnssec-keyfromlabel.docbook
+++ b/bin/dnssec/dnssec-keyfromlabel.docbook
@@ -181,9 +181,13 @@
 	    support, the label is a PKCS#11 URI string in the format
 	    "pkcs11:<option>keyword</option>=<replaceable>value</replaceable><optional>;<option>keyword</option>=<replaceable>value</replaceable>;...</optional>"
 	    Keywords include "token", which identifies the HSM; "object", which
-	    identifies the key; and "pin-source", which identifies a file from
-	    which the HSM's PIN code can be obtained.  The label will be
-	    stored in the on-disk "private" file.
+	    identifies the key; and "pin-source", which identifies a source from
+	    which the HSM's PIN code can be obtained.  The PIN can be provided
+	    either in a file specified as an attribute of the key's label
+	    (<command>pin-source=file</command>), or on the standard input
+	    (<command>pin-source=-</command>), or from the environment
+	    variable (<command>pin-source=%varname</command>).  The label will
+	    be stored in the on-disk "private" file.
 	  </para>
 	  <para>
 	    If the label contains a
