--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+5249.	[bug]		Fix a possible underflow in recursion clients
+			statistics when hitting recursive clients
+			soft quota. [GL #1067]
+
 5232.	[bug]		Fix a high-load race/crash in isc_socket_cancel().
 			[GL #834]
 
