--- a/bin/rndc/rndc.docbook
+++ b/bin/rndc/rndc.docbook
@@ -739,6 +739,15 @@
       </varlistentry>
 
       <varlistentry>
+	<term><userinput>responselog</userinput> <optional> on | off </optional> </term>
+	<listitem>
+	  <para>
+	    Enable or disable response logging.
+	  </para>
+	</listitem>
+      </varlistentry>
+
+      <varlistentry>
 	<term><userinput>retransfer <replaceable>zone</replaceable> <optional><replaceable>class</replaceable> <optional><replaceable>view</replaceable></optional></optional></userinput></term>
 	<listitem>
 	  <para>
