named-checkconf -i: ignore deprecate warnings
Adds a new option to named-checkconf, -i.  If set, named-checkconf
will not warn you about deprecated options.  This allows people
to use named-checkconf in automated deployment precoesses where an
operator only cares if their conf is valid, even if it is not optimal.

This was added as a request as part of introducing a policy on
removing named.conf options.

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+5260.	[func]		The option 'dnssec-lookaside' is now deprecated.
+			[GL #7]
+
 5259.	[func]		New option '-i' for 'named-checkconf' to ignore
 			warnings about deprecated options. [GL #1101]
 
