Added documentation for dig's +unexpected command line option.

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+5281.	[func]		Added +unexpected command line option to dig. 
+                        By default, dig won't accept a reply from a source
+                        other than the one to which it sent the query.
+                        Invoking dig with +unexpected argument will allow it
+                        to process replies from unexpected sources.
+
 5280.	[protocol]	Add support for displaying EDNS option LLQ. [GL #1201]
 
 5279.	[bug]		When loading, reject zones containing CDS or CDNSKEY
